# kirigami-workbench

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/qml/: main.qml
